--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "epicsDevTektronixMSO"
-version = "0.1.1"
+name = "epicsdevtektronixmso"
+version = "0.1.2"
 authors = [
   { name="Andrey Sukhanov", email="sukhanov@bnl.gov" },
 ]
